--- a/EvoCity Radio Player/App.config
+++ b/EvoCity Radio Player/App.config
@@ -13,6 +13,9 @@
             <setting name="Version" serializeAs="String">
                 <value>1.0</value>
             </setting>
+            <setting name="Volume" serializeAs="String">
+                <value>50</value>
+            </setting>
         </EvoCity_Radio_Player.Properties.Settings>
     </userSettings>
 </configuration>
