--- a/EvoCity Radio Player/Properties/Settings.settings
+++ b/EvoCity Radio Player/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="Version" Type="System.String" Scope="User">
       <Value Profile="(Default)">1.0</Value>
     </Setting>
+    <Setting Name="Volume" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">50</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
